# gatomia-cli

./: .gitignore  DEVELOPMENT.md  README.md  config.example.json  index.html  pyproject.toml  requirements.txt  verify_optimizations_manual.py
docker/: DOCKER_README.md  Dockerfile  docker-compose.yml  env.example
gatomia/: __init__.py  __main__.py  run_web_app.py
gatomia/cli/: __init__.py  config_manager.py  git_manager.py  html_generator.py  main.py
gatomia/cli/adapters/: doc_generator.py  doc_updater.py
gatomia/cli/commands/: analyze.py  config.py  generate.py  publish.py  update.py
gatomia/cli/models/: config.py
gatomia/cli/utils/: api_errors.py  errors.py  fs.py  progress.py  repo_validator.py  validation.py
gatomia/src/: __init__.py  config.py
gatomia/src/be/: __init__.py  agent_orchestrator.py  cluster_modules.py  documentation_generator.py  hashing.py  llm_services.py  main.py  prompt_template.py  state_manager.py  utils.py
gatomia/src/be/agent_tools/: deps.py  generate_sub_module_documentations.py  read_code_components.py  str_replace_editor.py
gatomia/src/be/dependency_analyzer/: __init__.py  ast_parser.py  dependency_graphs_builder.py  topo_sort.py
gatomia/src/be/dependency_analyzer/analysis/: analysis_service.py  call_graph_analyzer.py  repo_analyzer.py
gatomia/src/be/dependency_analyzer/analyzers/: c.py  cpp.py  csharp.py  java.py  javascript.py  php.py  python.py  typescript.py
gatomia/src/be/dependency_analyzer/models/: analysis.py
gatomia/src/be/dependency_analyzer/utils/: logging_config.py
gatomia/src/fe/: __init__.py  background_worker.py  cache_manager.py  config.py  models.py  routes.py  templates.py  visualise_docs.py  web_app.py
